--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "pino-pretty": "^11.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.21",
+    "@types/ip": "^1.1.3",
+    "express-types": "^0.0.4",
     "nodemon": "^3.1.0",
     "typescript": "^5.4.3"
   }
