--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
 		"strict": true,
 		"esModuleInterop": true
 	},
-	"include": ["src/**/*.ts"],
+	"include": ["src/**/*.ts", "src/index.ts"],
 	"exclude": ["node_modules"]
 }
