--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "NodeJS toy patients microservice",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "start:dev": "NODE_ENV=dev nodemon --exec ts-node-dev src/index.ts",
     "start:prod": "NODE_ENV=prod node dist/index.js",
@@ -28,6 +27,7 @@
     "@types/ip": "^1.1.3",
     "express-types": "^0.0.4",
     "nodemon": "^3.1.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.3"
   }
 }
