--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/ip": "^1.1.3",
+    "@types/mysql": "^2.15.26",
     "express-types": "^0.0.4",
     "nodemon": "^3.1.0",
     "ts-node-dev": "^2.0.0",
