--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "NodeJS toy patients microservice",
   "main": "index.js",
   "scripts": {
+    "start:build": "tsc -p .",
     "start:dev": "NODE_ENV=dev nodemon --exec ts-node-dev src/index.ts",
-    "start:prod": "NODE_ENV=prod node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "start:prod": "tsc -p . && NODE_ENV=prod node dist/index.js",
+    "start:test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "davidandw190",
   "license": "ISC",
@@ -26,7 +26,6 @@
     "@types/express": "^4.17.21",
     "@types/ip": "^1.1.3",
     "@types/mysql": "^2.15.26",
-    "express-types": "^0.0.4",
     "nodemon": "^3.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.3"
