--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "ip": "^2.0.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.9.3",
     "pino": "^8.19.0",
     "pino-pretty": "^11.0.0"
   },
@@ -25,7 +25,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/ip": "^1.1.3",
-    "@types/mysql": "^2.15.26",
+    "@types/mysql2": "github:types/mysql2",
     "nodemon": "^3.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.3"
