--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:build": "tsc -p .",
     "start:dev": "NODE_ENV=dev nodemon --exec ts-node-dev src/index.ts",
-    "start:prod": "tsc -p . && NODE_ENV=prod node dist/index.js",
+    "start:prod": "NODE_ENV=prod node dist/index.js",
     "start:test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "davidandw190",
@@ -18,7 +18,8 @@
     "ip": "^2.0.1",
     "mysql2": "^3.9.3",
     "pino": "^8.19.0",
-    "pino-pretty": "^11.0.0"
+    "pino-pretty": "^11.0.0",
+    "typescript": "^5.4.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -27,8 +28,7 @@
     "@types/ip": "^1.1.3",
     "@types/mysql2": "github:types/mysql2",
     "nodemon": "^3.1.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.3"
+    "ts-node-dev": "^2.0.0"
   },
   "prettier": {
     "semi": false,
